--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,6 @@ body {
   font-size: 36px;
   font-weight: 800;
   margin-bottom: 24px;
-  text-align: center;
 }
 .common-p {
   color: var(--secondary-description-color);
@@ -34,9 +33,35 @@ body {
   font-weight: 400;
   line-height: 26px;
   width: 50%;
-  margin: 0 auto;
   margin-bottom: 50px;
-  text-align: center;
+}
+.common-span {
+  color: #5a5a5d;
+
+  font-size: 14px;
+  font-weight: 400;
+}
+#common-btn {
+  border-radius: 8px;
+  background: var(--primary-color);
+  color: #fff;
+
+  font-size: 16px;
+  border: 0;
+  font-weight: 800;
+  padding: 12px 16px;
+}
+#common-text {
+  color: var(--primary-color);
+
+  font-size: 20px;
+
+  font-weight: 800;
+}
+#common-heading {
+  color: var(--heading-color);
+  font-size: 22px;
+  font-weight: 800;
 }
 /* Styling Start */
 
@@ -76,6 +101,10 @@ body {
   color: var(--menu-link-color);
   font-size: 16px;
   font-weight: 400;
+}
+.menu-links li a:hover {
+  color: var(--primary-color);
+  transition: 0.3s;
 }
 .menu-icon {
   font-size: 24px;
@@ -233,15 +262,16 @@ body {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  margin-bottom: 24px;
+  margin-left: 24px;
+  margin-bottom: 30px;
 }
 .tour-left-btn {
   color: #fff;
   background-color: var(--primary-color);
-  font-size: 20px;
+  font-size: 16px;
   border: 0;
   font-weight: 800;
-  padding: 12px 16px;
+  padding: 12px 24px;
   border-radius: 8px;
 }
 .popular-tour-right > img {
@@ -474,7 +504,7 @@ body {
 }
 .choose-card-3 {
   grid-column: 1/3;
-  width: calc(100% / 2 - 10px);
+  width: 50%;
   margin: 0 auto;
   border-radius: 16px;
   border: 1px solid rgba(233, 68, 68, 0.2);
@@ -482,6 +512,265 @@ body {
   padding: 30px;
 }
 /* why choose us sec end */
+/* deals section start */
+.deals-sec {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 100px auto;
+}
+.deals-details {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: 500px 500px 500px;
+  gap: 30px;
+}
+.first-deals1 {
+  background-image: url(../images/malaysia.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 16px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-right: 40px;
+}
+.first-deals-details {
+  width: 45%;
+  border-radius: 16px;
+  border: 2px solid #fff;
+  background: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(2.5px);
+  display: inline-flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 50px;
+}
+.first-deals-first {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.first-deals2 {
+  background-image: url(../images/hawai.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 16px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-left: 40px;
+}
+.first-deals3 {
+  background-image: url(../images/bangkok.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 16px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-right: 40px;
+}
+
+.fd-time {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.fd-man {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.fd-location {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.first-deals-btn {
+  align-self: flex-start;
+}
+.more-package-btn {
+  margin-top: 50px;
+  align-self: center;
+}
+/* deals sec end */
+
+/* video sec start */
+.video-sec {
+  width: 100%;
+  margin: 100px auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 450px;
+  align-items: center;
+  gap: 50px;
+}
+.video-sec-left > h1 {
+  width: 80%;
+}
+.video-sec-left > p {
+  width: 100%;
+}
+.video-sec-left-list {
+  color: var(--heading-color);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 26px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+.video-sec-right {
+  background-image: url(../images/mountains-bd.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 16px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.video-sec-right > h1 {
+  width: 50%;
+  color: #fff;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+}
+.video-sec-right > img {
+  position: absolute;
+  width: 95%;
+  bottom: 10px;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+}
+.video-sec-btn {
+  border-radius: 8px;
+  background: var(--primary-color);
+  color: #fff;
+
+  font-size: 16px;
+  border: 0;
+  font-weight: 800;
+  padding: 12px 24px;
+}
+/* video sec end */
+/* newsletter sec */
+.newsletter-sec {
+  width: 100%;
+  margin: 100px auto;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-template-rows: 400px;
+  gap: 50px;
+}
+.newsletter-sec-right {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/northan-light.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 16px;
+  position: relative;
+}
+.newsletter-sec-right-ribbon {
+  background-color: var(--primary-color);
+  border-radius: 16px;
+  width: 40%;
+  padding: 16px 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 5px;
+  bottom: 45px;
+  transform: rotate(-20deg);
+}
+.newsletter-sec-right-ribbon > h1 {
+  color: #fff;
+  font-size: 24px;
+  font-weight: 800;
+  margin-bottom: 10px;
+}
+.newsletter-sec-right-ribbon > p {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+}
+.newsletter-sec-left {
+  border-radius: 16px;
+  border: 1px solid #ff5400;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 24px;
+}
+.newsletter-sec-left > h1 {
+  color: #131318;
+  font-size: 24px;
+  font-weight: 800;
+}
+.newsletter-sec-left > p {
+  width: 80%;
+  color: #5a5a5d;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+.newsletter-sec-left > input[type="text"],
+input[type="email"] {
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  border: 0;
+  padding: 16px;
+}
+.newsletter-sec-left > input[type="text"]:focus,
+input[type="email"]:focus {
+  outline: 0;
+}
+/* newsletter sec end*/
+
+/* footer start */
+.footer {
+  width: 100%;
+  margin-top: 100px;
+  background: rgba(19, 19, 24, 0.05);
+  padding: 80px 200px;
+}
+.footer-sec {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.footer-sec-p {
+  width: 70%;
+  color: #5a5a5d;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+.footer-icons {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-bottom: 60px;
+}
+/* footer end */
+
 /* media query  */
 @media screen and (max-width: 600px) {
   /* header part */
@@ -544,7 +833,7 @@ body {
   }
   .destination-gallery {
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(7, 180px);
+    grid-template-rows: repeat(7, 250px);
   }
   .destination-gallery-1,
   .destination-gallery-2,
@@ -554,5 +843,57 @@ body {
   .destination-gallery-6,
   .destination-gallery-7 {
     grid-column: 1/12;
+  }
+
+  .choose-card-1 {
+    grid-column: 1/3;
+  }
+  .choose-card-2 {
+    grid-column: 1/3;
+  }
+  .choose-card-3 {
+    width: 100%;
+    grid-column: 1/3;
+  }
+  .common-p {
+    width: 90%;
+  }
+  .first-deals1 {
+    justify-content: center;
+    align-items: end;
+    padding-right: 0;
+    padding-bottom: 20px;
+  }
+  .first-deals2 {
+    justify-content: center;
+    align-items: end;
+    padding-left: 0;
+    padding-bottom: 20px;
+  }
+  .first-deals3 {
+    justify-content: center;
+    align-items: end;
+    padding-right: 0;
+    padding-bottom: 20px;
+  }
+  .first-deals-details {
+    width: 80%;
+  }
+  .common-span {
+    font-size: 12px;
+  }
+  .video-sec {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 400px 400px;
+  }
+  .newsletter-sec {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 400px 400px;
+    gap: 30px;
+  }
+  .newsletter-sec-right-ribbon {
+    width: 50%;
+    right: 4px;
+    bottom: 40px;
   }
 }
