--- a/styles/style.css
+++ b/styles/style.css
@@ -902,6 +902,7 @@ body {
   background-position: center center;
   border-radius: 16px;
   position: relative;
+  overflow: hidden;
 }
 .newsletter-sec-right-ribbon {
   background-color: var(--primary-color);
@@ -997,41 +998,6 @@ input[type="email"]:focus {
 /* footer end */
 
 /* media query  */
-@media screen and (max-width: 599px) {
-  .destination-h1 {
-    font-size: 24px;
-  }
-  .destination-p {
-    font-size: 14px;
-  }
-  .tour-left-h1 {
-    font-size: 24px;
-  }
-  .tour-left-p-1 {
-    font-size: 14px;
-  }
-  .choose-h1 {
-    font-size: 24px;
-  }
-  .choose-p {
-    font-size: 14px;
-  }
-  .deals-h1 {
-    font-size: 24px;
-  }
-  .video-sec-h1 {
-    font-size: 24px;
-  }
-  .video-sec-p {
-    font-size: 14px;
-  }
-  .reviews-h1 {
-    font-size: 24px;
-  }
-  .reviews-p {
-    font-size: 14px;
-  }
-}
 @media screen and (max-width: 600px) {
   /* header part */
   .menu-icon {
@@ -1082,6 +1048,54 @@ input[type="email"]:focus {
   }
   .logo-text {
     font-size: 16px;
+  }
+  .newsletter-sec-right-ribbon {
+    width: 50%;
+    padding: 12px 20px;
+    right: 0;
+    text-align: center;
+    padding: 5px;
+  }
+  .newsletter-sec-right-ribbon > h1 {
+    font-size: 20px;
+    width: 90%;
+  }
+  .newsletter-sec-right-ribbon > p {
+    font-size: 12px;
+    width: 90%;
+  }
+  .destination-h1 {
+    font-size: 24px;
+  }
+  .destination-p {
+    font-size: 14px;
+  }
+  .tour-left-h1 {
+    font-size: 24px;
+  }
+  .tour-left-p-1 {
+    font-size: 14px;
+  }
+  .choose-h1 {
+    font-size: 24px;
+  }
+  .choose-p {
+    font-size: 14px;
+  }
+  .deals-h1 {
+    font-size: 24px;
+  }
+  .video-sec-h1 {
+    font-size: 24px;
+  }
+  .video-sec-p {
+    font-size: 14px;
+  }
+  .reviews-h1 {
+    font-size: 24px;
+  }
+  .reviews-p {
+    font-size: 14px;
   }
 
   .popular-tour-sec {
@@ -1153,11 +1167,6 @@ input[type="email"]:focus {
     grid-template-rows: repeat(2, 1fr);
     gap: 30px;
   }
-  .newsletter-sec-right-ribbon {
-    width: 50%;
-    right: 0;
-    bottom: 40px;
-  }
   .reviews-sec {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -1195,18 +1204,10 @@ input[type="email"]:focus {
   }
 }
 @media screen and (min-width: 992px) {
-  .header-banner {
-    padding: 80px 100px;
-  }
-  .first-deals-details {
-    width: 60%;
-  }
-}
-@media screen and (max-width: 992px) {
   .newsletter-sec-right-ribbon {
     text-align: center;
     right: 16px;
-    bottom: 28px;
+    bottom: 40px;
   }
 }
 /* Tablets (601px to 991px) */
@@ -1234,5 +1235,19 @@ input[type="email"]:focus {
   .popular-tour-sec {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto;
+  }
+  .newsletter-sec {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 30px;
+  }
+  .newsletter-sec-right-ribbon {
+    text-align: center;
+  }
+  .footer {
+    padding: 50px 100px;
+  }
+  .footer-sec-p {
+    width: 90%;
   }
 }
