--- a/styles/style.css
+++ b/styles/style.css
@@ -47,9 +47,14 @@ body {
   color: #fff;
 
   font-size: 16px;
-  border: 0;
+  border: 1px solid var(--primary-color);
   font-weight: 800;
   padding: 12px 16px;
+}
+#common-btn:hover {
+  border: 1px solid var(--primary-color);
+  background: none;
+  color: var(--primary-color);
 }
 #common-text {
   color: var(--primary-color);
@@ -669,6 +674,106 @@ body {
 }
 /* deals sec end */
 
+/* trending sec start */
+.trending-sec {
+  width: 100%;
+  margin: 100px auto;
+  background-image: linear-gradient(
+      104deg,
+      rgba(72, 5, 125, 0.5) -1.03%,
+      rgba(42, 221, 231, 0.5) 100%
+    ),
+    url(../images/trending-sec.jpeg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  backdrop-filter: blur(7.5px);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  border-radius: 16px;
+  align-items: center;
+  gap: 50px;
+  color: white;
+  padding: 30px 40px;
+}
+.trending-right {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 100%;
+}
+.trending-left {
+  width: 100%;
+}
+.trending-left > img {
+  width: 100%;
+}
+.trending-right > button {
+  background: #affff0;
+  border-radius: 30px;
+  border: 0;
+  color: white;
+  padding: 12px;
+  font-weight: 600;
+  color: #1c2b38;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 800;
+  text-transform: uppercase;
+  align-self: flex-start;
+}
+.trending-right > h1 {
+  color: #fff;
+  text-shadow: 0px 5px 13px rgba(255, 255, 255, 0.4);
+  font-size: 56px;
+  font-weight: 700;
+}
+.trending-right > p {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 25px;
+}
+.trending-rating {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.trending-rating > p {
+  font-size: 14px;
+  font-weight: 600;
+}
+.trending-rating > p > span {
+  font-size: 14px;
+  font-weight: 700;
+}
+.trending-location {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.trending-location > p {
+  font-size: 14px;
+  font-weight: 600;
+}
+.trending-btn {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.trending-btn > button {
+  color: white;
+  padding: 16px 32px;
+  border: 0;
+  border-radius: 40px;
+  background: #ffda32;
+  box-shadow: 0px 8px 20px 0px rgba(255, 218, 50, 0.5);
+  color: var(--Main-Dark, #1c2b38);
+  font-size: 16px;
+  font-weight: 800;
+}
+/* trending sec end */
+
 /* video sec start */
 .video-sec {
   width: 100%;
@@ -702,6 +807,9 @@ body {
   line-height: 26px;
   margin-left: 16px;
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 .video-sec-right {
   background-image: url(../images/mountains-bd.png);
@@ -890,7 +998,7 @@ body {
   width: 100%;
   margin: 100px auto;
   display: grid;
-  grid-template-columns: 0.8fr 1.2fr;
+  grid-template-columns: 0.9fr 1.1fr;
   grid-template-rows: 400px;
   gap: 30px;
 }
@@ -997,9 +1105,13 @@ input[type="email"]:focus {
   gap: 30px;
   margin-bottom: 60px;
 }
+.footer-icons > i:hover {
+  color: var(--primary-color);
+}
 /* footer end */
 
-/* media query  */
+/* media query  for mobile*/
+
 @media screen and (max-width: 600px) {
   /* header part */
   .menu-icon {
@@ -1013,10 +1125,10 @@ input[type="email"]:focus {
     position: absolute;
     top: 80px;
     right: 0;
-    left: 0;
     background-color: var(--primary-color);
     border-radius: 16px;
     padding: 20px 0;
+    width: 80%;
   }
   #page-active {
     color: white;
@@ -1024,7 +1136,9 @@ input[type="email"]:focus {
   .menu-links > li > a {
     color: white;
   }
-
+  .menu-links > li > a:hover {
+    color: white;
+  }
   #menu-toggle:checked + .menu-icon + .menu-links {
     display: flex;
   }
@@ -1099,7 +1213,14 @@ input[type="email"]:focus {
   .reviews-p {
     font-size: 14px;
   }
-
+  .trending-sec {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    padding: 50px;
+  }
+  .trending-left {
+    display: none;
+  }
   .popular-tour-sec {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto;
